--- a/Prosjekter/tilfeldigkort/kortstokk.html
+++ b/Prosjekter/tilfeldigkort/kortstokk.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tilfeldig kort</title>
     <link rel="stylesheet" href="../prosjekter.css">
+    <link rel="stylesheet" href="../../responsiv.css">
     <link rel="icon" href="../../Media/code.png">
 </head>
 
@@ -15,7 +16,7 @@
     <section>
         <nav id="navbar">
             <a href="../../index.html">
-                <h1>IT1 23/24 </h1>
+                <h1 style="font-family: Chakra Petch;">IT1 23/24 </h1>
             </a>
             <ul class="nav-linker">
                 <li class="navEL"> <a href="../../index.html#Prosjekter"> Prosjekter </a></li>
