--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IT1</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="responsiv.css">
     <link rel="icon" href="Media/code.png">
 </head>
 
@@ -15,7 +16,7 @@
     <section>
         <nav id="navbar">
             <a href="index.html">
-                <h1>IT1 23/24 </h1>
+                <h1 style="font-family: Chakra Petch;">IT1 23/24 </h1>
             </a>
             <ul class="nav-linker">
                 <li class="navEL"> <a href="#Prosjekter"> Prosjekter </a></li>
@@ -46,15 +47,15 @@
                         </button>
                     </a>
                     <div style="width: 20px;"></div>
-                    <a href="javascript: scrollToKomp_maal();">
+                    <a href="javascript: scrollToKompmaal();">
                         <button class="btn">
                             Kompetansemål
                         </button>
                     </a>
                     <div style="width: 20px;"></div>
-                    <a href="javascript: scrollToFooter();">
+                    <a href="javascript: scrollToProsent();">
                         <button class="btn">
-                            Om meg
+                            Prosentandel
                         </button>
                     </a>
                 </div>
@@ -116,6 +117,17 @@
                     </a>
                 </div>
             </div>
+
+
+            <!--pilsvg med scrolling-->
+            <div class="transition whiteSvgpil">
+                <a href="javascript: scrollToKompmaal();">
+                    <svg id="arrowBtn" width="50" height="50" fill="white" fill-rule="evenodd" clip-rule="evenodd">
+                        <path
+                            d="M12 0c6.623 0 12 5.377 12 12s-5.377 12-12 12-12-5.377-12-12 5.377-12 12-12zm0 1c6.071 0 11 4.929 11 11s-4.929 11-11 11-11-4.929-11-11 4.929-11 11-11zm5.247 8l-5.247 6.44-5.263-6.44-.737.678 6 7.322 6-7.335-.753-.665z" />
+                    </svg>
+                </a>
+            </div>
         </div>
     </section>
 
@@ -130,12 +142,15 @@
         </div>
         <div class="kompetansemal_li">
             <h4>Mål for opplæringen er at eleven skal kunne</h4>
-            <ul>
-                <li>Drøfte dagsaktuelle temaer knyttet til hvordan informasjonsteknologi påvirker individet og samfunnet
+            <ul id="kompMaalUl">
+                <li>Drøfte dagsaktuelle temaer knyttet til hvordan informasjonsteknologi påvirker individet og
+                    samfunnet
                 </li>
-                <li>Beskrive sentrale komponenter i datamaskiner og nettverk og gjøre rede for hvilken funksjon de har
+                <li>Beskrive sentrale komponenter i datamaskiner og nettverk og gjøre rede for hvilken funksjon de
+                    har
                 </li>
-                <li>Gjøre rede for og vurdere hvordan ulike typer informasjon kan representeres digitalt og struktureres
+                <li>Gjøre rede for og vurdere hvordan ulike typer informasjon kan representeres digitalt og
+                    struktureres
                     ved hjelp av ulike datalagringsmetoder</li>
                 <li>Utvikle nettsider ved hjelp av markeringsspråk</li>
                 <li>Lagre og hente fram data, presentere data på nettsider og reflektere over hvordan
@@ -150,16 +165,85 @@
                 <li>Bruke algoritmisk tenkning og programmering for å utforske en problemstilling og presentere
                     resultatet</li>
             </ul>
+
+            <!--pilsvg med scrolling-->
+            <div class="transition">
+                <a href="javascript: scrollToProsent();">
+                    <svg id="arrowBtn" width="50" height="50" fill="rgb(255,142,184)" fill-rule="evenodd" clip-rule="evenodd">
+                        <path
+                            d="M12 0c6.623 0 12 5.377 12 12s-5.377 12-12 12-12-5.377-12-12 5.377-12 12-12zm0 1c6.071 0 11 4.929 11 11s-4.929 11-11 11-11-4.929-11-11 4.929-11 11-11zm5.247 8l-5.247 6.44-5.263-6.44-.737.678 6 7.322 6-7.335-.753-.665z" />
+                    </svg>
+                </a>
+            </div>
         </div>
-    </section>
-
-
-
-    <!----HVOR MYE HTML, CSS OG JS BRUKT-----------------------------------------------------------
-    <section>
 
     </section>
-    -->
+
+
+
+    <!----HVOR MYE HTML, CSS OG JS BRUKT----------------------------------------------------------->
+
+    <!--bølgesvg-->
+    <div class="svgdiv">
+        <svg class="svg1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="rgb(255,142,184)" fill-opacity="1"
+                d="M0,160L48,144C96,128,192,96,288,106.7C384,117,480,171,576,160C672,149,768,75,864,58.7C960,43,1056,85,1152,112C1248,139,1344,149,1392,154.7L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+            </path>
+        </svg>
+    </div>
+
+    <section id="Prosent" style="margin-top: -1px; margin-bottom: -1px;">
+
+        <div class="prosentdiv nr2">
+            <div id="prosentOverskrift">
+                <h1> Hvor mye HTML, CSS og JS brukt på denne nettsiden </h1>
+            </div>
+            <div class="prosentAndel">
+                <div id="info">
+                    <div class="infobox">
+                        <h3> FAG </h3>
+                        <p> informasjonsteknologi 1 </p>
+                        <p> &nbsp; </p>
+                        <h3> INNLEVERING </h3>
+                        <p> 19.05.2024 </p>
+                        <p> &nbsp; </p>
+                        <h3> KLASSE OG ÅR </h3>
+                        <p> vg2 </p>
+                    </div>
+                </div>
+                <div class="prosentAndel-bar">
+                    <div class="bar">
+                        <div class="info">
+                            <span>HTML</span>
+                        </div>
+                        <div class="progresjonslinje html"><span></span></div>
+                    </div>
+                    <div class="bar">
+                        <div class="info">
+                            <span>CSS</span>
+                        </div>
+                        <div class="progresjonslinje css"><span></span></div>
+                    </div>
+                    <div class="bar">
+                        <div class="info">
+                            <span>JAVASCRIPT</span>
+                        </div>
+                        <div class="progresjonslinje js"><span></span></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+    <!--bølgesvg opp ned-->
+    <div class="svgdiv svg180">
+        <svg class="svg1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="rgb(255,142,184)" fill-opacity="1"
+                d="M0,160L48,144C96,128,192,96,288,106.7C384,117,480,171,576,160C672,149,768,75,864,58.7C960,43,1056,85,1152,112C1248,139,1344,149,1392,154.7L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+            </path>
+        </svg>
+    </div>
 
 
 
