--- a/quiz.html
+++ b/quiz.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IT1</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="responsiv.css">
     <link rel="icon" href="Media/code.png">
 </head>
 
@@ -15,7 +16,7 @@
     <section>
         <nav id="navbar">
             <a href="index.html">
-                <h1>IT1 23/24 </h1>
+                <h1 style="font-family: Chakra Petch;">IT1 23/24 </h1>
             </a>
             <ul class="nav-linker">
                 <li class="navEL"> <a href="index.html#Prosjekter"> Prosjekter </a></li>
@@ -67,7 +68,7 @@
 
 
     <!--QUIZ------------------------------------------------------------------------------------------------>
-    <section class="quizSection" id="quiz"> <!--Fjerner den hvite linjen under svg-->
+    <section class="quizSection" id="quiz" style="margin-top: -1px;"> <!--Fjerner den hvite linjen under svg-->
         <h1 id="overskrift">QUIZ OM IT1</h1>
 
         <div class="spm">
@@ -81,74 +82,74 @@
 
             <div class="spmdiv">
                 <!--SPØRSMÅL 2-->
-                <h3>SPØRSMÅL 2</h3>
-                <button onclick="riktig(this, event)">Svar alt. 1 riktig</button>
-                <button onclick="feil(this, event)">Svar alt. 2 feil</button>
-                <button onclick="feil(this, event)">Svar alt. 3 feil</button>
+                <h3>HVA STÅR HTML FOR?</h3>
+                <button onclick="feil(this, event)">Hyperlink and Text Management Language</button>
+                <button onclick="feil(this, event)">Helpful Tool for Marking up Layouts</button>
+                <button onclick="riktig(this, event)">HyperText Markup Language</button>
             </div>
 
             <div class="spmdiv">
                 <!--SPØRSMÅL 3-->
-                <h3>SPØRSMÅL 3</h3>
-                <button onclick="riktig(this, event)">Svar alt. 1 riktig</button>
-                <button onclick="feil(this, event)">Svar alt. 2 feil</button>
-                <button onclick="feil(this, event)">Svar alt. 3 feil</button>
+                <h3>HVA STÅR CSS FOR?</h3>
+                <button onclick="riktig(this, event)">Cascading Style Sheets</button>
+                <button onclick="feil(this, event)">Creative Styling Solutions</button>
+                <button onclick="feil(this, event)">Customizable Styling System</button>
             </div>
 
             <div class="spmdiv">
                 <!--SPØRSMÅL 4-->
-                <h3>SPØRSMÅL 4</h3>
-                <button onclick="riktig(this, event)">Svar alt. 1 riktig</button>
-                <button onclick="feil(this, event)">Svar alt. 2 feil</button>
-                <button onclick="feil(this, event)">Svar alt. 3 feil</button>
+                <h3>HVA STÅR URL FOR I IT?</h3>
+                <button onclick="feil(this, event)">Unified Reference Link</button>
+                <button onclick="riktig(this, event)">Uniform Resource Locator</button>
+                <button onclick="feil(this, event)">Universal Resource Link</button>
             </div>
 
             <div class="spmdiv">
                 <!--SPØRSMÅL 5-->
-                <h3>SPØRSMÅL 5</h3>
-                <button onclick="riktig(this, event)">Svar alt. 1 riktig</button>
-                <button onclick="feil(this, event)">Svar alt. 2 feil</button>
-                <button onclick="feil(this, event)">Svar alt. 3 feil</button>
+                <h3>HVA BRUKES JAVASCRIPT TIL I WEBUTVIKLING?</h3>
+                <button onclick="feil(this, event)"> Å lage statiske bilder</button>
+                <button onclick="riktig(this, event)">Å legge til interaktivitet på nettsider</button>
+                <button onclick="feil(this, event)">Å strukturere innholdet på nettsider</button>
             </div>
 
             <div class="spmdiv">
                 <!--SPØRSMÅL 6-->
-                <h3>SPØRSMÅL 6</h3>
-                <button onclick="riktig(this, event)">Svar alt. 1 riktig</button>
-                <button onclick="feil(this, event)">Svar alt. 2 feil</button>
-                <button onclick="feil(this, event)">Svar alt. 3 feil</button>
+                <h3>HVA ER EN VANLIG METODE FOR Å GJØRE EN NETTSIDE RESPONSIV?</h3>
+                <button onclick="riktig(this, event)">Bruke CSS Media Queries</button>
+                <button onclick="feil(this, event)">Bruke HTML</button>
+                <button onclick="feil(this, event)">Bruke JavaScript</button>
             </div>
 
             <div class="spmdiv">
                 <!--SPØRSMÅL 7-->
-                <h3>SPØRSMÅL 7</h3>
-                <button onclick="riktig(this, event)">Svar alt. 1 riktig</button>
-                <button onclick="feil(this, event)">Svar alt. 2 feil</button>
-                <button onclick="feil(this, event)">Svar alt. 3 feil</button>
+                <h3>HVA ER ET VANLIG FORMAT FOR Å REPRESENTERE BILDER PÅ NETTET?</h3>
+                <button onclick="feil(this, event)">MP3</button>
+                <button onclick="riktig(this, event)">JPG</button>
+                <button onclick="feil(this, event)">WAV</button>
             </div>
 
             <div class="spmdiv">
                 <!--SPØRSMÅL 8-->
-                <h3>SPØRSMÅL 8</h3>
-                <button onclick="riktig(this, event)">Svar alt. 1 riktig</button>
-                <button onclick="feil(this, event)">Svar alt. 2 feil</button>
-                <button onclick="feil(this, event)">Svar alt. 3 feil</button>
+                <h3>HVA STÅR HTTP FOR I SAMMENHENG MED WEBKOMMUNIKASJON?</h3>
+                <button onclick="feil(this, event)">Hosting Transmission Protocol</button>
+                <button onclick="feil(this, event)">High Tech Programming Platform</button>
+                <button onclick="riktig(this, event)">HyperText Transfer Protocol</button>
             </div>
 
             <div class="spmdiv">
                 <!--SPØRSMÅL 9-->
-                <h3>SPØRSMÅL 9</h3>
-                <button onclick="riktig(this, event)">Svar alt. 1 riktig</button>
-                <button onclick="feil(this, event)">Svar alt. 2 feil</button>
-                <button onclick="feil(this, event)">Svar alt. 3 feil</button>
+                <h3>HVA STÅR FORKORTELSEN "WWW" FOR?</h3>
+                <button onclick="feil(this, event)">Wide Web World</button>
+                <button onclick="riktig(this, event)">World Wide Web</button>
+                <button onclick="feil(this, event)">Web World Wide</button>
             </div>
 
             <div class="spmdiv">
                 <!--SPØRSMÅL 10-->
-                <h3>SPØRSMÅL 10</h3>
-                <button onclick="riktig(this, event)">Svar alt. 1 riktig</button>
-                <button onclick="feil(this, event)">Svar alt. 2 feil</button>
-                <button onclick="feil(this, event)">Svar alt. 3 feil</button>
+                <h3>HVA STÅR IT1 FOR?</h3>
+                <button onclick="riktig(this, event)">Informasjons-teknologi 1</button>
+                <button onclick="feil(this, event)">Internett tekonologi 1</button>
+                <button onclick="feil(this, event)">Informasjonstriks 1</button>
             </div>
 
             <div id="resultater"> <p>Antall poeng: 0/10</p></div>
